--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ rel="stylesheet">
 </style>
 <body>
 <nav>
-     <nav class="navbar navbar-expand-sm navbar-dark">
+     <nav class="navbar navbar-expand-sm navbar-dark" fixed>
         <div class="container-fluid">
            
             <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#mynavbar">
