--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ rel="stylesheet">
         </div>
     </nav>
 </nav>
-<div class="two-columns main-div" style="margin: 50px;">
+<div class="two-columns main-div m-50">
     <div class="div-1"
     style="border-bottom-left-radius: 10px;
     border-top-left-radius: 10px; text-align: center;"><br><br><br>
